Updates tmux.conf with a proper use of uptime in my Mac OS system.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -216,7 +216,7 @@ set-option -g status-utf8 on
 set-window-option -g window-status-current-bg red
 
 set -g status-left-length 40
-set -g status-left '#[fg=green][#H(#S) #[fg=yellow]#(uptime | cut -d "," -f 4- | cut -d ":" -f 2 | cut -d " " -f 2-)#[fg=green]]'
+set -g status-left '#[fg=green][#H(#S) #[fg=yellow]#(uptime | cut -d "," -f 3 | cut -d ":" -f 2)#[fg=green]]'
 set -g status-right '#[fg=green]#(date)'
 
 #### COLOUR (Solarized 256)
