--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -230,3 +230,6 @@ set-option -g display-panes-colour colour166 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
+
+# mouse scroll
+set -g mouse on
