Removes some obsolete tmux settings.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -112,9 +112,9 @@ bind-key -n "C-Down" select-pane -t :.+
 bind-key -r Tab select-pane -t :.+
 
 # kill current pane/window
-bind-key q confirm-before kill-pane
-bind-key Q confirm-before kill-window
-bind-key C-q confirm-before kill-pane
+bind-key q kill-pane
+bind-key Q kill-window
+bind-key C-q kill-pane
 bind-key x kill-pane
 bind-key X kill-window
 
@@ -149,9 +149,6 @@ bind-key p previous-window
 
 # title (default key in tmux is ',')
 bind-key A command-prompt "rename-window %%"
-
-# quit
-bind-key \ confirm-before kill-server
 
 # displays
 bind-key * list-clients
@@ -193,8 +190,6 @@ set -g status-keys vi
 set -g display-time 2000
 
 
-set-window-option -g window-status-current-bg red
-
 set -g status-left-length 40
 set -g status-left '#[fg=green][#H(#S) #[fg=yellow]#(uptime | cut -d "," -f 3 | cut -d ":" -f 2)#[fg=green]]'
 set -g status-right '#[fg=green]#(date)'
@@ -204,25 +199,6 @@ set -g status-right '#[fg=green]#(date)'
 # default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
